# src/routers/user.js
@@ -3,9 +3,11 @@ import { authenticate } from "../middlewares/authenticate.js";
 import { ctrlWrapper } from "../utils/ctrlWrapper.js";
 import multer from "multer";
 import { getMe, updateAvatar, updateUser } from "../controllers/user.js";
-import { refreshUserSessionController } from "../controllers/auth.js";
 import { validateBody } from "../middlewares/validateBody.js";
-import { updateUserSchema } from "../schemas/user.js";
+import { updateUserSchema } from "../validation/user.js";
+
+
+
 
 const router = Router();
 const upload = multer({ dest: "uploads/" });
@@ -14,7 +16,7 @@ router.use(authenticate);
 
 router.get("/me", ctrlWrapper(getMe));
 router.post("/avatar", upload.single("avatar"), ctrlWrapper(updateAvatar));
-router.patch("/", validateBody(updateUserSchema), ctrlWrapper(updateUser)); // <-- ДОДАНО!
-router.post('/refresh', ctrlWrapper(refreshUserSessionController));
+router.patch("/", validateBody(updateUserSchema), ctrlWrapper(updateUser));
+
 
 export default router;
